--- a/miniprogram/components/custom-nav-bar/index.wxml
+++ b/miniprogram/components/custom-nav-bar/index.wxml
@@ -1,30 +1,24 @@
-<!--components/custom-navbar/index.wxml-->
-<view catchtap="handleBackTop" class="custom-nav-bar">
-  <van-nav-bar
-    fixed="{{fixed}}"
-    placeholder="{{placeholder}}"
-    border="{{border}}"
-    custom-style="{{customStyle}}"
-    z-index="{{zIndex}}"
-    title="{{title}}"
-    safe-area-inset-top="{{safeAreaInsetTop}}"
-  >
-    <view slot="left" class="solt-left">
-      <view wx:if="{{showHome}}" catchtap="handleReLaunchHome" class="home">
-        <custom-iconfont icon="icon-home" size="48rpx" />
-      </view>
-      <view wx:if="{{showBack}}" catchtap="handleNavigateBack" class="back">
-        <custom-iconfont icon="icon-leftarrow" size="48rpx" />
-      </view>
-      <view wx:if="{{showClose}}" catchtap="handleNavigateBack" class="close">
-        <custom-iconfont icon="icon-close" size="48rpx" />
-      </view>
-      <view wx:if="{{showSlot}}" class="solt">
-        <slot />
-      </view>
+<!-- components/custom-navbar/index.wxml -->
+<view
+  catchtap="handleBackTop"
+  style="z-index: {{zIndex}}; {{customStyle}}"
+  class="custom-nav-bar {{fixed ? 'custom-nav-bar--fixed' : ''}}"
+>
+  <view style="height: {{systemInfo.safeArea.top * 2}}rpx;"></view>
+  <view wx:if="{{isSlot}}" class="custom-nav-bar_slot">
+    <slot />
+  </view>
+  <view wx:else class="custom-nav-bar_content">
+    <view wx:if="{{title}}" class="custom-nav-bar_title van-ellipsis">{{title}}</view>
+    <view wx:if="{{showHome}}" catchtap="handleReLaunchHome" class="custom-nav-bar_home-icon">
+      <custom-iconfont icon="icon-home" size="48rpx" />
     </view>
-    <view slot="title" class="solt-title ^van-ellipsis">
-      <slot name="title" />
+    <view wx:if="{{showBack}}" catchtap="handleNavigateBack" class="custom-nav-bar_back-icon">
+      <custom-iconfont icon="icon-leftarrow" size="48rpx" />
     </view>
-  </van-nav-bar>
+    <view wx:if="{{showClose}}" catchtap="handleNavigateBack" class="custom-nav-bar_close-icon">
+      <custom-iconfont icon="icon-close" size="48rpx" />
+    </view>
+  </view>
 </view>
+<view wx:if="{{fixed && placeholder}}" style="height: {{height * 2}}rpx;"></view>
