--- a/miniprogram/components/custom-nav-bar/index.scss
+++ b/miniprogram/components/custom-nav-bar/index.scss
@@ -20,6 +20,7 @@
       top: 50%;
       transform: translate(-50%, -50%);
       width: 50vw;
+      text-align: center;
     }
     .custom-nav-bar_home-icon,
     .custom-nav-bar_back-icon,
